# SpaceTogether

./: .dockerignore  .gitignore  Dockerfile  README.md  bun.lockb  docker-compose.yml  happy.ts  next-auth.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
locale/: en.json  kiny.json
messages/: en.json  kiny.json
src/: auth.config.ts  auth.ts  i18n.config.ts  i18n.ts  middleware.ts  router.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/school/: ask_to_join_school_api.rs  mod.rs
src-tauri/src/api/school_api/: mod.rs
src-tauri/src/api/school_api/class_api/: class_action.rs  mod.rs
src-tauri/src/api/school_api/school_request/: mod.rs  school_request_api_action.rs
src-tauri/src/api/user_api/: api_use_data.rs  api_user_action.rs  api_user_auth.rs  api_user_update.rs  mod.rs
src-tauri/src/errors/: errors.rs  result.rs
src-tauri/src/handlers/: mod.rs
src-tauri/src/handlers/school_handlers/: mod.rs
src-tauri/src/handlers/school_handlers/class_handlers/: handler_class_action.rs  mod.rs
src-tauri/src/libs/: api_conn.rs  mod.rs  mongodb.rs
src-tauri/src/models/: image_model.rs  mod.rs  school.rs  user.rs  user_model.rs
src-tauri/src/models/class/: mod.rs
src-tauri/src/models/school/: mod.rs  school_request_model.rs
src-tauri/src/server/: member.rs  mod.rs  school_class.rs
src-tauri/src/validation/: school_validation.rs
src/app/: layout.tsx  page.tsx
src/context/: ClientThemeWrapper.tsx  changeTheme.tsx  (+1 more)
(+197 files in other folders)
