[package]
name = "space-together"
version = "0.1.0"
description = "Desktop Application for school management"
authors = ["HappyHeart Bruno"]
license = ""
repository = "https://github.com/brunorwanda4/SpaceTogether.git"
default-run = "space-together"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "fs-all", "window-set-content-protected", "window-show", "window-start-dragging", "window-hide", "window-unmaximize", "window-maximize", "window-minimize", "window-unminimize", "window-close"] }
zod = "0.1.0"
mongodb = "3.0.1"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["default", "blocking", "cookies", "json", "socks"] }
chrono = "0.4.31"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
